增加ONOFF按钮检测

--- a/boot/project/nor_sdram_txt_sdram/Objects/YH-RT1052.build_log.htm
+++ b/boot/project/nor_sdram_txt_sdram/Objects/YH-RT1052.build_log.htm
@@ -21,14 +21,38 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-D:\Project\boot\project\boot.uvprojx
+D:\Project_v0.04\boot\project\boot.uvprojx
 Project File Date:  01/02/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram_txt_sdram'
+compiling system_MIMXRT1052.c...
+compiling fsl_gpio.c...
+compiling fsl_clock.c...
+compiling fsl_lpuart.c...
+compiling fsl_common.c...
+compiling fsl_flexspi.c...
+compiling fsl_assert.c...
+compiling fsl_sbrk.c...
+compiling fsl_notifier.c...
+compiling fsl_shell.c...
+compiling fsl_debug_console.c...
+compiling fsl_log.c...
+compiling fsl_str.c...
+compiling fsl_io.c...
+compiling board.c...
+compiling clock_config.c...
+compiling pin_mux.c...
+compiling main.c...
+compiling norflash_test.c...
+compiling fire_imxrt1052_sdram_ini_dcd.c...
+compiling bsp_norflash.c...
+compiling core_delay.c...
+compiling fire_imxrt1052_spiflash_config.c...
+compiling fsl_flexspi_nor_boot.c...
 linking...
-Program Size: Code=16672 RO-data=3328 RW-data=64 ZI-data=3108  
+Program Size: Code=16824 RO-data=3328 RW-data=76 ZI-data=3108  
 ".\nor_sdram_txt_sdram\Objects\YH-RT1052.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -43,7 +67,7 @@ Package Vendor: NXP
   C:\Keil_v5\ARM\PACK\NXP\MIMXRT1052_DFP\12.0.0
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:16
 </pre>
 </body>
 </html>
