--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  01/04/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram'
-compiling battery_app.c...
+compiling emmc_drv.c...
 linking...
-Program Size: Code=89172 RO-data=7348 RW-data=721324 ZI-data=423164  
+Program Size: Code=89188 RO-data=7348 RW-data=721284 ZI-data=425232  
 ".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -116,55 +116,55 @@ Package Vendor: NXP
       Include file:  fsl_device_registers.h
       Source file:   system_MIMXRT1052.c
       Include file:  MIMXRT1052.h
-      Include file:  MIMXRT1052_features.h
       Include file:  system_MIMXRT1052.h
+      Include file:  MIMXRT1052_features.h
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
       Source file:   utilities\fsl_shell.c
       Include file:  utilities\fsl_shell.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager_uart:1.0.0
-      Source file:   components\serial_manager\serial_port_uart.c
       Include file:  components\serial_manager\serial_port_uart.h
+      Source file:   components\serial_manager\serial_port_uart.c
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
       Include file:  components\serial_manager\serial_manager.h
-      Source file:   components\serial_manager\serial_manager.c
       Include file:  components\serial_manager\serial_port_internal.h
+      Source file:   components\serial_manager\serial_manager.c
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
-      Include file:  utilities\fsl_notifier.h
       Source file:   utilities\fsl_notifier.c
+      Include file:  utilities\fsl_notifier.h
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
       Source file:   utilities\debug_console\fsl_debug_console.c
-      Include file:  utilities\debug_console\fsl_debug_console.h
+      Include file:  utilities\str\fsl_str.h
       Source file:   utilities\str\fsl_str.c
       Include file:  utilities\debug_console\fsl_debug_console_conf.h
-      Include file:  utilities\str\fsl_str.h
+      Include file:  utilities\debug_console\fsl_debug_console.h
 
    * Component: NXP::Device:SDK Utilities:assert:1.0.0
       Source file:   utilities\fsl_assert.c
 
    * Component: NXP::Device:SDK Drivers:xbara:2.0.4
-      Source file:   drivers\fsl_xbara.c
       Include file:  drivers\fsl_xbara.h
+      Source file:   drivers\fsl_xbara.c
 
    * Component: NXP::Device:SDK Drivers:src:2.0.1
       Source file:   drivers\fsl_src.c
       Include file:  drivers\fsl_src.h
 
    * Component: NXP::Device:SDK Drivers:snvs_lp:2.1.0
-      Include file:  drivers\fsl_snvs_lp.h
       Source file:   drivers\fsl_snvs_lp.c
+      Include file:  drivers\fsl_snvs_lp.h
 
    * Component: NXP::Device:SDK Drivers:snvs_hp:2.1.2
       Include file:  drivers\fsl_snvs_hp.h
       Source file:   drivers\fsl_snvs_hp.c
 
    * Component: NXP::Device:SDK Drivers:sdhc:2.2.8
-      Include file:  drivers\fsl_usdhc.h
       Source file:   drivers\fsl_usdhc.c
+      Include file:  drivers\fsl_usdhc.h
 
    * Component: NXP::Device:SDK Drivers:qtmr:2.0.0
       Include file:  drivers\fsl_qtmr.h
@@ -175,8 +175,8 @@ Package Vendor: NXP
       Include file:  drivers\fsl_pit.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_edma:2.2.7
-      Include file:  drivers\fsl_lpuart_edma.h
       Source file:   drivers\fsl_lpuart_edma.c
+      Include file:  drivers\fsl_lpuart_edma.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_adapter:1.0.0
       Source file:   components\uart\lpuart_adapter.c
@@ -187,8 +187,8 @@ Package Vendor: NXP
       Source file:   drivers\fsl_lpuart.c
 
    * Component: NXP::Device:SDK Drivers:lpspi:2.0.3
-      Include file:  drivers\fsl_lpspi.h
       Source file:   drivers\fsl_lpspi.c
+      Include file:  drivers\fsl_lpspi.h
 
    * Component: NXP::Device:SDK Drivers:lists:1.0.0
       Source file:   components\lists\generic_list.c
@@ -210,47 +210,47 @@ Package Vendor: NXP
       Include file:  drivers\fsl_gpio.h
 
    * Component: NXP::Device:SDK Drivers:flexspi:2.1.1
-      Include file:  drivers\fsl_flexspi.h
       Source file:   drivers\fsl_flexspi.c
+      Include file:  drivers\fsl_flexspi.h
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
       Include file:  drivers\fsl_edma.h
       Source file:   drivers\fsl_edma.c
 
    * Component: NXP::Device:SDK Drivers:dmamux:2.0.2
-      Source file:   drivers\fsl_dmamux.c
       Include file:  drivers\fsl_dmamux.h
+      Source file:   drivers\fsl_dmamux.c
 
    * Component: NXP::Device:SDK Drivers:dcdc_1:2.0.0
       Include file:  drivers\fsl_dcdc.h
       Source file:   drivers\fsl_dcdc.c
 
    * Component: NXP::Device:SDK Drivers:common:2.1.0
-      Source file:   drivers\fsl_common.c
       Include file:  drivers\fsl_common.h
+      Source file:   drivers\fsl_common.c
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
-      Include file:  drivers\fsl_clock.h
       Source file:   drivers\fsl_clock.c
+      Include file:  drivers\fsl_clock.h
 
    * Component: NXP::Device:SDK Drivers:adc_etc:2.0.1
-      Source file:   drivers\fsl_adc_etc.c
       Include file:  drivers\fsl_adc_etc.h
+      Source file:   drivers\fsl_adc_etc.c
 
    * Component: NXP::Device:SDK Drivers:adc_12b1msps_sar:2.0.2
       Include file:  drivers\fsl_adc.h
       Source file:   drivers\fsl_adc.c
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
 
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM.FreeRTOS::RTOS:Timers:10.2.0
-      Source file:   Source\timers.c
       Include file:  Source\include\timers.h
+      Source file:   Source\timers.c
 
    * Component: ARM.FreeRTOS::RTOS:Stream Buffer:10.2.0
       Source file:   Source\stream_buffer.c
@@ -264,21 +264,21 @@ Package Vendor: NXP
       Source file:   Source\portable\MemMang\heap_4.c
 
    * Component: ARM.FreeRTOS::RTOS:Event Groups:10.2.0
-      Source file:   Source\event_groups.c
       Include file:  Source\include\event_groups.h
+      Source file:   Source\event_groups.c
 
    * Component: ARM.FreeRTOS::RTOS:Coroutines:10.2.0
       Include file:  Source\include\croutine.h
       Source file:   Source\croutine.c
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
-      Include file:  Source\include\FreeRTOS.h
-      Include file:  Source\include\queue.h
-      Include file:  Source\include\semphr.h
-      Include file:  Source\include\task.h
       Source file:   Source\queue.c
-      Source file:   Source\tasks.c
+      Include file:  Source\include\task.h
+      Include file:  Source\include\semphr.h
+      Include file:  Source\include\queue.h
       Source file:   Source\list.c
+      Source file:   Source\tasks.c
+      Include file:  Source\include\FreeRTOS.h
       Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
 
