--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -22,15 +22,18 @@ Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
 D:\project\rt1052.uvprojx
-Project File Date:  01/04/2020
+Project File Date:  01/05/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram'
-compiling emmc_drv.c...
+compiling ble_protocol.c...
+User\src\ble_protocol.c(371): warning:  #940-D: missing return statement at end of non-void function "ParseGetSampleData" 
+  }
+User\src\ble_protocol.c: 1 warning, 0 errors
 linking...
-Program Size: Code=89188 RO-data=7348 RW-data=721284 ZI-data=425232  
-".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=88636 RO-data=7272 RW-data=721276 ZI-data=425248  
+".\Objects\rt1052.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -112,51 +115,51 @@ Package Vendor: NXP
 <h2>Collection of Component Files used:</h2>
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
-      Source file:   arm\startup_MIMXRT1052.s
+      Include file:  MIMXRT1052_features.h
+      Include file:  MIMXRT1052.h
       Include file:  fsl_device_registers.h
       Source file:   system_MIMXRT1052.c
-      Include file:  MIMXRT1052.h
       Include file:  system_MIMXRT1052.h
-      Include file:  MIMXRT1052_features.h
+      Source file:   arm\startup_MIMXRT1052.s
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
-      Source file:   utilities\fsl_shell.c
       Include file:  utilities\fsl_shell.h
+      Source file:   utilities\fsl_shell.c
 
    * Component: NXP::Device:SDK Utilities:serial_manager_uart:1.0.0
-      Include file:  components\serial_manager\serial_port_uart.h
       Source file:   components\serial_manager\serial_port_uart.c
+      Include file:  components\serial_manager\serial_port_uart.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
-      Include file:  components\serial_manager\serial_manager.h
       Include file:  components\serial_manager\serial_port_internal.h
       Source file:   components\serial_manager\serial_manager.c
+      Include file:  components\serial_manager\serial_manager.h
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
       Source file:   utilities\fsl_notifier.c
       Include file:  utilities\fsl_notifier.h
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
-      Source file:   utilities\debug_console\fsl_debug_console.c
-      Include file:  utilities\str\fsl_str.h
-      Source file:   utilities\str\fsl_str.c
-      Include file:  utilities\debug_console\fsl_debug_console_conf.h
       Include file:  utilities\debug_console\fsl_debug_console.h
+      Source file:   utilities\str\fsl_str.c
+      Source file:   utilities\debug_console\fsl_debug_console.c
+      Include file:  utilities\debug_console\fsl_debug_console_conf.h
+      Include file:  utilities\str\fsl_str.h
 
    * Component: NXP::Device:SDK Utilities:assert:1.0.0
       Source file:   utilities\fsl_assert.c
 
    * Component: NXP::Device:SDK Drivers:xbara:2.0.4
-      Include file:  drivers\fsl_xbara.h
       Source file:   drivers\fsl_xbara.c
+      Include file:  drivers\fsl_xbara.h
 
    * Component: NXP::Device:SDK Drivers:src:2.0.1
       Source file:   drivers\fsl_src.c
       Include file:  drivers\fsl_src.h
 
    * Component: NXP::Device:SDK Drivers:snvs_lp:2.1.0
-      Source file:   drivers\fsl_snvs_lp.c
       Include file:  drivers\fsl_snvs_lp.h
+      Source file:   drivers\fsl_snvs_lp.c
 
    * Component: NXP::Device:SDK Drivers:snvs_hp:2.1.2
       Include file:  drivers\fsl_snvs_hp.h
@@ -167,12 +170,12 @@ Package Vendor: NXP
       Include file:  drivers\fsl_usdhc.h
 
    * Component: NXP::Device:SDK Drivers:qtmr:2.0.0
-      Include file:  drivers\fsl_qtmr.h
       Source file:   drivers\fsl_qtmr.c
+      Include file:  drivers\fsl_qtmr.h
 
    * Component: NXP::Device:SDK Drivers:pit:2.0.2
-      Source file:   drivers\fsl_pit.c
       Include file:  drivers\fsl_pit.h
+      Source file:   drivers\fsl_pit.c
 
    * Component: NXP::Device:SDK Drivers:lpuart_edma:2.2.7
       Source file:   drivers\fsl_lpuart_edma.c
@@ -183,12 +186,12 @@ Package Vendor: NXP
       Include file:  components\uart\uart.h
 
    * Component: NXP::Device:SDK Drivers:lpuart:2.2.7
-      Include file:  drivers\fsl_lpuart.h
       Source file:   drivers\fsl_lpuart.c
+      Include file:  drivers\fsl_lpuart.h
 
    * Component: NXP::Device:SDK Drivers:lpspi:2.0.3
-      Source file:   drivers\fsl_lpspi.c
       Include file:  drivers\fsl_lpspi.h
+      Source file:   drivers\fsl_lpspi.c
 
    * Component: NXP::Device:SDK Drivers:lists:1.0.0
       Source file:   components\lists\generic_list.c
@@ -206,45 +209,45 @@ Package Vendor: NXP
       Include file:  drivers\fsl_gpt.h
 
    * Component: NXP::Device:SDK Drivers:gpio:2.0.2
-      Source file:   drivers\fsl_gpio.c
       Include file:  drivers\fsl_gpio.h
+      Source file:   drivers\fsl_gpio.c
 
    * Component: NXP::Device:SDK Drivers:flexspi:2.1.1
       Source file:   drivers\fsl_flexspi.c
       Include file:  drivers\fsl_flexspi.h
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
-      Include file:  drivers\fsl_edma.h
       Source file:   drivers\fsl_edma.c
+      Include file:  drivers\fsl_edma.h
 
    * Component: NXP::Device:SDK Drivers:dmamux:2.0.2
-      Include file:  drivers\fsl_dmamux.h
       Source file:   drivers\fsl_dmamux.c
+      Include file:  drivers\fsl_dmamux.h
 
    * Component: NXP::Device:SDK Drivers:dcdc_1:2.0.0
       Include file:  drivers\fsl_dcdc.h
       Source file:   drivers\fsl_dcdc.c
 
    * Component: NXP::Device:SDK Drivers:common:2.1.0
-      Include file:  drivers\fsl_common.h
       Source file:   drivers\fsl_common.c
+      Include file:  drivers\fsl_common.h
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
       Source file:   drivers\fsl_clock.c
       Include file:  drivers\fsl_clock.h
 
    * Component: NXP::Device:SDK Drivers:adc_etc:2.0.1
-      Include file:  drivers\fsl_adc_etc.h
       Source file:   drivers\fsl_adc_etc.c
+      Include file:  drivers\fsl_adc_etc.h
 
    * Component: NXP::Device:SDK Drivers:adc_12b1msps_sar:2.0.2
       Include file:  drivers\fsl_adc.h
       Source file:   drivers\fsl_adc.c
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
 
    * Component: ARM::CMSIS:CORE:5.3.0
 
@@ -257,28 +260,28 @@ Package Vendor: NXP
       Include file:  Source\include\stream_buffer.h
 
    * Component: ARM.FreeRTOS::RTOS:Message Buffer:10.2.0
-      Source file:   Source\stream_buffer.c
       Include file:  Source\include\message_buffer.h
+      Source file:   Source\stream_buffer.c
 
    * Component: ARM.FreeRTOS::RTOS:Heap:Heap_4:10.2.0
       Source file:   Source\portable\MemMang\heap_4.c
 
    * Component: ARM.FreeRTOS::RTOS:Event Groups:10.2.0
-      Include file:  Source\include\event_groups.h
       Source file:   Source\event_groups.c
+      Include file:  Source\include\event_groups.h
 
    * Component: ARM.FreeRTOS::RTOS:Coroutines:10.2.0
       Include file:  Source\include\croutine.h
       Source file:   Source\croutine.c
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
-      Source file:   Source\queue.c
-      Include file:  Source\include\task.h
-      Include file:  Source\include\semphr.h
-      Include file:  Source\include\queue.h
-      Source file:   Source\list.c
-      Source file:   Source\tasks.c
       Include file:  Source\include\FreeRTOS.h
+      Include file:  Source\include\queue.h
+      Source file:   Source\tasks.c
+      Include file:  Source\include\task.h
+      Source file:   Source\list.c
+      Source file:   Source\queue.c
+      Include file:  Source\include\semphr.h
       Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
 
@@ -287,7 +290,7 @@ Package Vendor: NXP
 
    * Component: ::CMSIS:RTOS2:2.1.3 (API)
       Include file:  CMSIS\RTOS2\Include\cmsis_os2.h
-Build Time Elapsed:  00:00:07
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
