添加boot程序, 并可以从boot启动app

--- a/boot/project/nor_sdram_txt_sdram/Objects/YH-RT1052.build_log.htm
+++ b/boot/project/nor_sdram_txt_sdram/Objects/YH-RT1052.build_log.htm
@@ -27,6 +27,9 @@ Project File Date:  01/02/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram_txt_sdram'
+compiling main.c...
+linking...
+Program Size: Code=16588 RO-data=3324 RW-data=76 ZI-data=3108  
 ".\nor_sdram_txt_sdram\Objects\YH-RT1052.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -41,7 +44,7 @@ Package Vendor: NXP
   C:\Keil_v5\ARM\PACK\NXP\MIMXRT1052_DFP\12.0.0
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
