--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -22,11 +22,15 @@ Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
 C:\Users\ningjw\Desktop\RT1052\rt1052.uvprojx
-Project File Date:  02/23/2020
+Project File Date:  02/26/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram'
+compiling clock_config.c...
+linking...
+Program Size: Code=96712 RO-data=8388 RW-data=892 ZI-data=5427580  
+FromELF: creating hex file...
 ".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -117,23 +121,23 @@ Package Vendor: NXP
       Include file:  CMSIS\RTOS2\FreeRTOS\Config\ARMCM\FreeRTOSConfig.h
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
-      Include file:  Source\include\FreeRTOS.h
       Include file:  Source\include\queue.h
-      Include file:  Source\include\task.h
-      Include file:  Source\include\semphr.h
-      Source file:   Source\list.c
       Source file:   Source\queue.c
+      Include file:  Source\include\FreeRTOS.h
+      Source file:   Source\list.c
+      Include file:  Source\include\semphr.h
       Source file:   Source\tasks.c
+      Include file:  Source\include\task.h
       Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
 
    * Component: ARM.FreeRTOS::RTOS:Coroutines:10.2.0
-      Source file:   Source\croutine.c
       Include file:  Source\include\croutine.h
+      Source file:   Source\croutine.c
 
    * Component: ARM.FreeRTOS::RTOS:Event Groups:10.2.0
-      Source file:   Source\event_groups.c
       Include file:  Source\include\event_groups.h
+      Source file:   Source\event_groups.c
 
    * Component: ARM.FreeRTOS::RTOS:Heap:Heap_4:10.2.0
       Source file:   Source\portable\MemMang\heap_4.c
@@ -147,39 +151,39 @@ Package Vendor: NXP
       Source file:   Source\stream_buffer.c
 
    * Component: ARM.FreeRTOS::RTOS:Timers:10.2.0
-      Source file:   Source\timers.c
       Include file:  Source\include\timers.h
+      Source file:   Source\timers.c
 
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
 
    * Component: NXP::Device:SDK Drivers:adc_12b1msps_sar:2.0.2
-      Include file:  drivers\fsl_adc.h
       Source file:   drivers\fsl_adc.c
+      Include file:  drivers\fsl_adc.h
 
    * Component: NXP::Device:SDK Drivers:adc_etc:2.0.1
-      Include file:  drivers\fsl_adc_etc.h
       Source file:   drivers\fsl_adc_etc.c
+      Include file:  drivers\fsl_adc_etc.h
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
-      Include file:  drivers\fsl_clock.h
       Source file:   drivers\fsl_clock.c
+      Include file:  drivers\fsl_clock.h
 
    * Component: NXP::Device:SDK Drivers:common:2.1.0
       Source file:   drivers\fsl_common.c
       Include file:  drivers\fsl_common.h
 
    * Component: NXP::Device:SDK Drivers:dcdc_1:2.0.0
-      Include file:  drivers\fsl_dcdc.h
       Source file:   drivers\fsl_dcdc.c
+      Include file:  drivers\fsl_dcdc.h
 
    * Component: NXP::Device:SDK Drivers:dmamux:2.0.2
-      Source file:   drivers\fsl_dmamux.c
       Include file:  drivers\fsl_dmamux.h
+      Source file:   drivers\fsl_dmamux.c
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
       Source file:   drivers\fsl_edma.c
@@ -205,20 +209,20 @@ Package Vendor: NXP
       Include file:  drivers\fsl_iomuxc.h
 
    * Component: NXP::Device:SDK Drivers:lists:1.0.0
-      Source file:   components\lists\generic_list.c
       Include file:  components\lists\generic_list.h
+      Source file:   components\lists\generic_list.c
 
    * Component: NXP::Device:SDK Drivers:lpspi:2.0.3
-      Source file:   drivers\fsl_lpspi.c
       Include file:  drivers\fsl_lpspi.h
+      Source file:   drivers\fsl_lpspi.c
 
    * Component: NXP::Device:SDK Drivers:lpspi_edma:2.0.2
       Include file:  drivers\fsl_lpspi_edma.h
       Source file:   drivers\fsl_lpspi_edma.c
 
    * Component: NXP::Device:SDK Drivers:lpuart:2.2.7
-      Source file:   drivers\fsl_lpuart.c
       Include file:  drivers\fsl_lpuart.h
+      Source file:   drivers\fsl_lpuart.c
 
    * Component: NXP::Device:SDK Drivers:lpuart_adapter:1.0.0
       Source file:   components\uart\lpuart_adapter.c
@@ -229,8 +233,8 @@ Package Vendor: NXP
       Source file:   drivers\fsl_lpuart_edma.c
 
    * Component: NXP::Device:SDK Drivers:pit:2.0.2
-      Source file:   drivers\fsl_pit.c
       Include file:  drivers\fsl_pit.h
+      Source file:   drivers\fsl_pit.c
 
    * Component: NXP::Device:SDK Drivers:pwm:2.0.0
       Include file:  drivers\fsl_pwm.h
@@ -253,8 +257,8 @@ Package Vendor: NXP
       Source file:   drivers\fsl_snvs_lp.c
 
    * Component: NXP::Device:SDK Drivers:src:2.0.1
-      Include file:  drivers\fsl_src.h
       Source file:   drivers\fsl_src.c
+      Include file:  drivers\fsl_src.h
 
    * Component: NXP::Device:SDK Drivers:xbara:2.0.4
       Source file:   drivers\fsl_xbara.c
@@ -264,37 +268,37 @@ Package Vendor: NXP
       Source file:   utilities\fsl_assert.c
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
-      Include file:  utilities\str\fsl_str.h
       Source file:   utilities\str\fsl_str.c
+      Include file:  utilities\str\fsl_str.h
+      Include file:  utilities\debug_console\fsl_debug_console_conf.h
       Source file:   utilities\debug_console\fsl_debug_console.c
       Include file:  utilities\debug_console\fsl_debug_console.h
-      Include file:  utilities\debug_console\fsl_debug_console_conf.h
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
-      Source file:   utilities\fsl_notifier.c
       Include file:  utilities\fsl_notifier.h
+      Source file:   utilities\fsl_notifier.c
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
       Include file:  components\serial_manager\serial_manager.h
-      Include file:  components\serial_manager\serial_port_internal.h
       Source file:   components\serial_manager\serial_manager.c
+      Include file:  components\serial_manager\serial_port_internal.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager_uart:1.0.0
-      Include file:  components\serial_manager\serial_port_uart.h
       Source file:   components\serial_manager\serial_port_uart.c
+      Include file:  components\serial_manager\serial_port_uart.h
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
       Source file:   utilities\fsl_shell.c
       Include file:  utilities\fsl_shell.h
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
-      Source file:   arm\startup_MIMXRT1052.s
       Include file:  MIMXRT1052_features.h
-      Source file:   system_MIMXRT1052.c
-      Include file:  fsl_device_registers.h
       Include file:  MIMXRT1052.h
+      Source file:   system_MIMXRT1052.c
       Include file:  system_MIMXRT1052.h
-Build Time Elapsed:  00:00:00
+      Source file:   arm\startup_MIMXRT1052.s
+      Include file:  fsl_device_registers.h
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
